--- a/src/redmap/apps/frontend/templates/frontend/newsletter_signup.html
+++ b/src/redmap/apps/frontend/templates/frontend/newsletter_signup.html
@@ -1,7 +1,7 @@
 {% extends "ajax_base.html" %}
 
 {% block content %}
-	<form method="post" action="http://email.ionata.com.au/t/y/s/pxuuj/" class="form-horizontal">
+	<form method="post" action="https://email.ionata.com.au/t/y/s/pxuuj/" class="form-horizontal">
 
 		<fieldset>
 			<legend>Subscribe to our newsletter</legend>
